# ReferenceTracker

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.6745665  CMakeSettings.json  ReferenceTracker.cpp  ReferenceTracker.h  common.h  main.cpp  resources.qrc
Actions/: TrackedPointCommands.cpp  TrackedPointCommands.h  TrackingCommands.cpp  TrackingCommands.h
Data/: Document.cpp  Document.h  TrackedPoint.cpp  TrackedPoint.h  Video.cpp  Video.h
Resources/: next_frame.pdn  style.css
Tracking/: TrackingManager.cpp  TrackingManager.h
UI/: AutomaticTrackingDisplay.cpp  AutomaticTrackingDisplay.h  ClickableLabel.cpp  ClickableLabel.h  DynamicSplitter.cpp  DynamicSplitter.h  GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ScrollableGraphicsView.cpp  ScrollableGraphicsView.h  TrackedPointsList.cpp  TrackedPointsList.h  TypeSafeSettings.cpp  TypeSafeSettings.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayer.ui
